[gd_scene load_steps=29 format=3 uid="uid://bwidwh5p2rssg"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_1xvcl"]
[ext_resource type="PackedScene" uid="uid://cdtdiasoteh21" path="res://scenes/visualizer.tscn" id="2_jno5e"]
[ext_resource type="Texture2D" uid="uid://dkteq2vi86e4l" path="res://assets/TitleBg.png" id="3_ab86s"]
[ext_resource type="Texture2D" uid="uid://dldaajvyljh2f" path="res://assets/DefaultBG.png" id="4_ixv4a"]
[ext_resource type="Texture2D" uid="uid://bed435lff3p3o" path="res://assets/StartButton_Off-export.png" id="5_2qcj2"]
[ext_resource type="Texture2D" uid="uid://brohe1y5irrg4" path="res://assets/StartButton_On-export.png" id="6_tyyd0"]
[ext_resource type="PackedScene" uid="uid://bedhxgulbfinw" path="res://scenes/slime_bar.tscn" id="8_lxro1"]
[ext_resource type="Texture2D" uid="uid://bn4caxpbcx44x" path="res://assets/QuitBtn-export.png" id="8_nsof4"]
[ext_resource type="Texture2D" uid="uid://cw4ao3xfdrw5a" path="res://assets/QuitBtn-dim.png" id="8_oav6v"]
[ext_resource type="Texture2D" uid="uid://s1yqu4exk5ek" path="res://assets/level_button_normal-export.png" id="11_wv460"]
[ext_resource type="Texture2D" uid="uid://d0ow8tehxafg0" path="res://assets/level_button_hover.png" id="12_3njtb"]
[ext_resource type="Texture2D" uid="uid://c8ac2mdkp703b" path="res://assets/level_button_disabled.png" id="13_b7342"]
[ext_resource type="Script" path="res://scripts/level_button.gd" id="14_s6iel"]
[ext_resource type="Texture2D" uid="uid://dbghm54ljyxtl" path="res://assets/level_1.png" id="15_y7q78"]
[ext_resource type="Texture2D" uid="uid://dmqbh0nbunr5" path="res://assets/level_2.png" id="16_17j1h"]
[ext_resource type="Texture2D" uid="uid://s1nwu4o1tgrt" path="res://assets/level_3.png" id="17_77bgo"]
[ext_resource type="Texture2D" uid="uid://cg0682vutotst" path="res://assets/level_4.png" id="18_t8cpy"]
[ext_resource type="Texture2D" uid="uid://cp4aiv77jfqlf" path="res://assets/level_5.png" id="19_nc3sh"]
[ext_resource type="Texture2D" uid="uid://bdc3foop13x8b" path="res://assets/level_6.png" id="20_lt3v0"]
[ext_resource type="Texture2D" uid="uid://crli0k8qfnink" path="res://assets/level_7.png" id="21_iver7"]
[ext_resource type="Texture2D" uid="uid://dd3ov0nb3us01" path="res://assets/level_8.png" id="22_m8env"]
[ext_resource type="Script" path="res://scripts/zoom.gd" id="23_n7d5p"]
[ext_resource type="AudioStream" uid="uid://c0o72ivjba4ww" path="res://assets/sfx/snail_poop.wav" id="23_sbb0y"]
[ext_resource type="Texture2D" uid="uid://xhw1efukvu4j" path="res://assets/death_message.png" id="23_vpftw"]
[ext_resource type="AudioStream" uid="uid://cwjqxdg340b3i" path="res://assets/sfx/snail_slurp4.wav" id="24_dk385"]
[ext_resource type="Texture2D" uid="uid://d13ivqtkioo4v" path="res://assets/win_message.png" id="24_rd5yr"]
[ext_resource type="AudioStream" uid="uid://s4acj36xlrjq" path="res://assets/sfx/death2.wav" id="25_3f54d"]
[ext_resource type="AudioStream" uid="uid://b5xfnqr3rto7m" path="res://assets/sfx/smailbg_mus-002.wav" id="28_qoivs"]

[node name="World" type="Node2D"]
script = ExtResource("1_1xvcl")

[node name="BG" type="CanvasLayer" parent="."]
layer = -2
follow_viewport_enabled = true

[node name="BGs" type="Control" parent="BG"]
z_index = -110
z_as_relative = false
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="MenuBG" type="TextureRect" parent="BG/BGs"]
z_index = -110
z_as_relative = false
y_sort_enabled = true
layout_mode = 2
offset_right = 2133.0
offset_bottom = 1205.08
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ab86s")

[node name="GameBG" type="TextureRect" parent="BG/BGs"]
z_index = -111
z_as_relative = false
y_sort_enabled = true
layout_mode = 2
offset_right = 2133.0
offset_bottom = 1205.08
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ixv4a")

[node name="MovingUI" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="MovingGUI" type="Control" parent="MovingUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitButton" type="TextureButton" parent="MovingUI/MovingGUI"]
layout_mode = 1
offset_left = 40.0
offset_top = 35.0
offset_right = 580.0
offset_bottom = 353.0
scale = Vector2(0.375, 0.375)
texture_normal = ExtResource("8_oav6v")
texture_pressed = ExtResource("8_oav6v")
texture_hover = ExtResource("8_nsof4")

[node name="DeathMessage" type="TextureRect" parent="MovingUI/MovingGUI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -751.5
offset_top = 147.0
offset_right = 757.5
offset_bottom = 411.0
grow_horizontal = 2
texture = ExtResource("23_vpftw")

[node name="WinMessage" type="TextureRect" parent="MovingUI/MovingGUI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -751.5
offset_top = 147.0
offset_right = 757.5
offset_bottom = 411.0
grow_horizontal = 2
texture = ExtResource("24_rd5yr")

[node name="SlimeBar" parent="MovingUI/MovingGUI" instance=ExtResource("8_lxro1")]
layout_mode = 1
offset_left = -588.0
offset_top = -297.0
offset_right = 381.0
offset_bottom = 171.0
scale = Vector2(0.55, 0.55)

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="GUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="UI/GUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -770.0
offset_top = -312.0
offset_right = -461.0
offset_bottom = -93.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.015, 1.015)
texture_normal = ExtResource("5_2qcj2")
texture_pressed = ExtResource("5_2qcj2")
texture_hover = ExtResource("6_tyyd0")

[node name="LeaveButton" type="TextureButton" parent="UI/GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -118.0
offset_right = 554.0
offset_bottom = 200.0
grow_vertical = 0
scale = Vector2(0.325, 0.325)
texture_normal = ExtResource("8_oav6v")
texture_pressed = ExtResource("8_oav6v")
texture_hover = ExtResource("8_nsof4")

[node name="LevelButtons" type="Control" parent="UI/GUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 345.0
offset_top = -290.0
offset_right = 345.0
offset_bottom = -290.0
grow_vertical = 2

[node name="LevelButton1" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 1
layout_mode = 1
offset_right = 141.0
offset_bottom = 132.0
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton1"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("15_y7q78")

[node name="LevelButton2" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 2
layout_mode = 1
offset_left = 168.0
offset_top = -2.0
offset_right = 309.0
offset_bottom = 130.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton2"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("16_17j1h")

[node name="LevelButton3" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 3
layout_mode = 1
offset_top = 155.0
offset_right = 141.0
offset_bottom = 287.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton3"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("17_77bgo")

[node name="LevelButton4" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 4
layout_mode = 1
offset_left = 175.0
offset_top = 157.0
offset_right = 316.0
offset_bottom = 289.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton4"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("18_t8cpy")

[node name="LevelButton5" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 5
layout_mode = 1
offset_left = 7.0
offset_top = 314.0
offset_right = 148.0
offset_bottom = 446.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton5"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("19_nc3sh")

[node name="LevelButton6" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 6
layout_mode = 1
offset_left = 182.0
offset_top = 317.0
offset_right = 323.0
offset_bottom = 449.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton6"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("20_lt3v0")

[node name="LevelButton7" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 7
layout_mode = 1
offset_left = 15.0
offset_top = 476.0
offset_right = 156.0
offset_bottom = 608.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton7"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("21_iver7")

[node name="LevelButton8" type="TextureButton" parent="UI/GUI/LevelButtons"]
z_index = 8
layout_mode = 1
offset_left = 189.0
offset_top = 479.0
offset_right = 330.0
offset_bottom = 611.0
disabled = true
texture_normal = ExtResource("11_wv460")
texture_pressed = ExtResource("11_wv460")
texture_hover = ExtResource("12_3njtb")
texture_disabled = ExtResource("13_b7342")
script = ExtResource("14_s6iel")

[node name="TextureRect" type="TextureRect" parent="UI/GUI/LevelButtons/LevelButton8"]
layout_mode = 1
offset_right = 141.0
offset_bottom = 132.0
texture = ExtResource("22_m8env")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1066, 600)
offset = Vector2(0.49, 0.01)
script = ExtResource("23_n7d5p")

[node name="Visualizer" parent="." instance=ExtResource("2_jno5e")]
line_color = Color(0.972549, 0.462745, 0, 1)
line_width = 4

[node name="SnailPoop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_sbb0y")
volume_db = -33.0
max_polyphony = 5

[node name="SnailSlurp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_dk385")
volume_db = -33.0
max_polyphony = 5

[node name="SnailWaterSlurp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_dk385")
volume_db = -22.0
max_polyphony = 5

[node name="SnailDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_3f54d")
volume_db = -20.0
max_polyphony = 5

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_qoivs")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="MovingUI/MovingGUI/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="UI/GUI/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/GUI/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="UI/GUI/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/GUI/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="finished" from="BGMusic" to="." method="_on_bg_music_finished"]
